apps/talos-home/velero/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: velero
  annotations:
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/enforce-version: latest
